# cotis-web

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/workflows/: ci.yml
cotis-web/: Cargo.toml
cotis-web-builder/: Cargo.toml  README.md
cotis-web-builder/resources/on-root/: index.html
cotis-web-builder/src/: lib.rs  main.rs
cotis-web/resources/web-renderer/: renderer.js
cotis-web/src/: color.rs  cotis_traits.rs  custom_data.rs  images.rs  interactivity.rs  lib.rs  renderer.rs  rendering.rs  start_up.rs  web_functions.rs
cotis-web/src/rendering/: drawable_defaults.rs
web-example/: Cargo.toml
web-example/src/: lib.rs
