[package]
name = "cotis-web-builder"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "WASM build routine and cotis-cli plugin for cotis-web"
readme = "../README.md"
documentation = "https://docs.rs/cotis-web-builder"
keywords = ["gui", "ui", "wasm", "web", "cli"]
categories = ["development-tools", "gui", "wasm"]

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "cotis-web-builder-cli"
path = "src/main.rs"

[dependencies]
log = "0.4.29"
directories = "6.0.0"
env_logger = "0.11.8"
fs_extra = "1.3.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
